[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/MovingPlatform/move_platform.png" type="Texture" id=1]
[ext_resource path="res://MovePlatform.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/motor.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 114.5, 30 )

[node name="MovePlatform" type="Node2D"]
script = ExtResource( 2 )

[node name="Debug_Line" type="Node2D" parent="."]

[node name="Base" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Base"]
texture = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="Base"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base/KinematicBody2D"]
position = Vector2( -0.5, -2 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="Base"]

[node name="PlatformSound" type="AudioStreamPlayer2D" parent="Base"]
stream = ExtResource( 3 )
max_distance = 1000.0

[connection signal="tween_completed" from="Base/Tween" to="." method="_on_Tween_tween_completed"]
